# resnet

./: .gitignore  README.md  ResNet.py  Resilience_NetworkX.ipynb  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-pipeline.yml
src/: network_file.tsv  pyproject.toml  requirements.txt  setup.py
src/resnet/: __init__.py  resnet.py  resnet_module.py
