[project]
name = "resnet"
version = "0.0.1"
description = "Measuring graph resilience or network robustness"
authors = [{name = "Unmani J", email = "unmani.jaygude@ucdconnect.ie"}]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.11.5"
dependencies = ["plotly", "networkx", "scipy"]

[project.urls]
"Source code" = "https://github.com/Unmani199/resnet"

[build-system]
requires = ["setuptools>=68.2.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["resnet"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.packages]
find = {} 
