# This file configures the project for packaging, and can also hold other tools' configuration settings.
# More details about what can go in this file:
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[project]
name = "resnet"
description = "Measuring graph resilience or network robustness"

# You can change this to README.md if you prefer.
readme = "README.md"

# Put your own name and email address here. You can also add more authors.
authors = [{name = "Unmani J", email = "unmani.jaygude@ucdconnect.ie"}]

# Classifiers for your package. PyPI displays these on its page.
# See https://pypi.org/classifiers/ for all of the possibilities.
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"]

# This is the minimum version of Python that pip will install your package on.
requires-python = ">= 3.11.6"

# List your needed third-party libraries, if you have any.  "rich" is here as an
# example.  Your list will be completely different.
dependencies = [ "plotly", "networkx", "scipy"]

# State that the version will be defined dynamically below.
dynamic = ["version"]

[project.urls]
# These URLs are displayed in a sidebar on PyPI. You don't have to have them,
# but they can help people learn more about your project. You can include as
# many named URLs as you want.  They can be any URL, not just to GitHub.
"Source code" = "https://github.com/Unmani199/resnet"

[project.scripts]
# COMMANDS: These are commands you are installing.  Omit this section if you
# have no commands.  The names of the settings are the command names.
# The values are a string in the form "module.to.import:function_to_run".

# The 'pkgsample_add' command will run the function add_main() in the src/pkgsample/add_cli.py file.
# pkgsample_add = "pkgsample.add_cli:add_main"


[tool.setuptools.dynamic]
# The version number will be read from __version__ in src/pkgsample/__init__.py
version.attr = "resnet.__version__"

[build-system]
requires = ["setuptools==68.2.2"]
build-backend = "setuptools.build_meta"
